--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,10 +1,13 @@
 <header fxLayoutAlign="start center">
-    <div fxFlex>
-        Logo
+    <div fxFlex fxLayoutAlign="start end" fxLayoutGap="15">
+        <mat-icon color="accent" class="logoicon">store</mat-icon>
+        <span id="logo">{{title}}</span>
     </div>
-<div>
-        <button routerLink="">Strona główna</button>
-        <button routerLink="/product">Produkty</button>
-        <button routerLink="/login">Zaloguj</button>
+<div fxLayoutGap="15" fxLayoutAlign="start center" fxLayoutGap="15">
+        <button mat-button color="primary" routerLink="">Strona główna</button>
+        <button mat-button color="accent" routerLink="/product">Produkty</button>
+        <span></span>
+        <button mat-button color="warn" routerLink="/login">Zaloguj</button>
+        <mat-icon color="accent" class="shoppingBasket">shopping_basket</mat-icon>
     </div>
 </header>
