component of products

--- a/src/app/layouts/fullpage/fullpage.component.html
+++ b/src/app/layouts/fullpage/fullpage.component.html
@@ -1,10 +1,10 @@
 
 <app-header flexLayout="column"></app-header>
-<div flexLayout="column">
+<div flexLayout="column" fxFlex>
     
-    <div fxFlex="80" class="content">
+    <div fxFlex="80" class="content" fxFlex >
         <router-outlet></router-outlet>
     </div>
 </div>
 
-<app-footer></app-footer>
+<app-footer flexLayout="row"></app-footer>
