--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,7 +5,7 @@
     </div>
 <div fxLayoutGap="15" fxLayoutAlign="start center" fxLayoutGap="15">
         <button mat-button color="primary" routerLink="">Strona główna</button>
-        <button mat-button color="accent" routerLink="/product">Produkty</button>
+        <button mat-button color="accent" routerLink="/products">Produkty</button>
         <span></span>
         <button mat-button color="warn" routerLink="/login">Zaloguj</button>
         <mat-icon color="accent" class="shoppingBasket">shopping_basket</mat-icon>
