--- a/src/app/layouts/fullpageadmin/fullpageadmin.component.html
+++ b/src/app/layouts/fullpageadmin/fullpageadmin.component.html
@@ -1,20 +1,29 @@
-<header flexLayout="column" fxLayoutAlign="start center">
-    <div fxFlex>
-        Logo
-    </div>
-    <div>
+<header flexLayout="column" fxLayoutAlign="start center" fxLayoutGap="45">
+    <div fxFlex fxLayoutAlign="start end" fxLayoutGap="10">
+        <mat-icon color="accent" class="logoicon">store</mat-icon>
+        <span class="logo">Shop Panel</span>
+        </div>
+        >
+    <div fxLayoutGap="30" >
         <button routerLink="">Strona główna</button>
         <button routerLink="">Produkty</button>
         <button routerLink="">Zaloguj</button>
     </div>
+        <div>
+        <mat-icon  fxLayoutAlign="end center" color="accent" class="shoppingBasket">shopping_basket</mat-icon>
+    </div>
 </header>
 <div flexLayout="row" fxFlex>
-    <div fxFlex="15">
+    <div >
         <div fxFlex class="sidebar">
-            Sidebar
-        </div>>
+            <mat-selection-list [multiple]="false">
+                <mat-list-option *ngFor="let category of categorys">
+                    {{category}}
+                </mat-list-option>
+            </mat-selection-list>
+        </div>
     </div>
-    <div fxFlex="85" class="content">
+    <div fxFlex class="content">
         <router-outlet></router-outlet>
     </div>
 </div>
