--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,6 +8,7 @@
         <button mat-button color="accent" routerLink="/products">Produkty</button>
         <span></span>
         <button mat-button color="warn" routerLink="/login">Zaloguj</button>
+        <span></span>
         <mat-icon color="accent" class="shoppingBasket">shopping_basket</mat-icon>
     </div>
 </header>
