--- a/src/app/layouts/fullpageadmin/fullpageadmin.component.html
+++ b/src/app/layouts/fullpageadmin/fullpageadmin.component.html
@@ -17,9 +17,9 @@
     <div >
         <div fxFlex class="sidebar">
             <mat-selection-list [multiple]="false">
-                <mat-list-option *ngFor="let category of categorys">
-                    {{category}}
-                </mat-list-option>
+                <mat-list-option><a routerLink="/admin"> Dashboard</a></mat-list-option>
+                <mat-list-option><a routerLink="/admin/products"> Produkty</a></mat-list-option>
+                <mat-list-option><a routerLink="/admin"> Link</a></mat-list-option>
             </mat-selection-list>
         </div>
     </div>
