--- a/src/app/modules/admin/adminproduct/admin-product.component.html
+++ b/src/app/modules/admin/adminproduct/admin-product.component.html
@@ -1,4 +1,4 @@
-<h1>Lista produktów</h1>
+<h1>Lista produktów  <button mat-raised-button color="accent" routerLink="/admin/products/add"> Dodaj product</button></h1>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <ng-container matColumnDef="id">
@@ -14,6 +14,14 @@
   <ng-container matColumnDef="price">
     <th mat-header-cell *matHeaderCellDef> Price </th>
     <td mat-cell *matCellDef="let element"> {{element.prize}} {{element.currency}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Actions </th>
+    <td mat-cell *matCellDef="let element"> 
+      <button mat-icon-button [routerLink]="['/admin/products/update/',element.id]">
+        <mat-icon color="primary">edit</mat-icon>
+      </button>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
