--- a/src/app/modules/admin/admin-confirm-dialog/admin-confirm-dialog.component.html
+++ b/src/app/modules/admin/admin-confirm-dialog/admin-confirm-dialog.component.html
@@ -1,1 +1,12 @@
-<p>admin-confirm-dialog works!</p>
+<div fxLayout="column" fxLayoutGap="50px">
+    <div fxLayout="row">
+        <span fxFlex>{{data.message}}</span>
+        <button class="closeButton" [mat-dialog-close]="false">
+            <mat-icon>close</mat-icon>
+        </button>
+    </div>
+    <div fxFlex>
+        <button mat-raised-button fxFlex [mat-dialog-close]="false">Anuluj</button>
+        <button mat-raised-button fxFlex color="warn" [mat-dialog-close]="true">Potwierdź</button>
+    </div>
+</div>
