--- a/src/app/modules/admin/adminproduct/admin-product.component.html
+++ b/src/app/modules/admin/adminproduct/admin-product.component.html
@@ -1,4 +1,5 @@
-<h1>Lista produktów  <button mat-raised-button color="accent" routerLink="/admin/products/add"> Dodaj product</button></h1>
+<h1>Lista produktów <button mat-raised-button color="accent" routerLink="/admin/products/add"> Dodaj product</button>
+</h1>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <ng-container matColumnDef="id">
@@ -18,14 +19,25 @@
 
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Actions </th>
-    <td mat-cell *matCellDef="let element"> 
+    <td mat-cell *matCellDef="let element">
       <button mat-icon-button [routerLink]="['/admin/products/update/',element.id]">
         <mat-icon color="primary">edit</mat-icon>
       </button>
-      <button mat-icon-button (click)="confirmDelete(element)" >
+      <button mat-icon-button (click)="confirmDelete(element)">
         <mat-icon color="warn">edit</mat-icon>
       </button>
   </ng-container>
+  <ng-container matColumnDef="image">
+    <th mat-header-cell *matHeaderCellDef> Obraz </th>
+    <td mat-cell *matCellDef="let element">
+      <a routerLink="{{'/admin/products/update/' +
+    element.id}}">
+        <img *ngIf="!element?.image" src="/assets/image-placeholder.png" mat-card-lg-image width="150">
+        <img *ngIf="element?.image" src="{{'/api/data/productImage/'+ element?.image}}" width="150">
+      </a>
+    </td>
+  </ng-container>
+
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
