--- a/src/app/modules/category/category.component.html
+++ b/src/app/modules/category/category.component.html
@@ -1,1 +1,33 @@
-<p>category works!</p>
+<p>kategoria: {{categoryProducts!.category.name}}</p>
+<p>{{categoryProducts!.category.description}}</p>
+
+<mat-card *ngFor="let product of categoryProducts?.products?.content">
+    <div flexLayout="row">
+      <div flexLayout="column" fxFlex>
+        <mat-card-title><a routerLink="{{'/products/' + product.slug}}" >{{product.name}}</a></mat-card-title>
+        <mat-card-subtitle>{{product.category}}</mat-card-subtitle>
+        <div flexLayout="row">
+          <a routerLink="{{'/products/' + product.slug}}" >
+          <img *ngIf="!product?.image"src="/assets/image-placeholder.png" mat-card-lg-image class="productImage">
+          <img *ngIf="product?.image"src="{{'/api/data/productImage/'+ product?.image}}" width="350" mat-card-lg-image class="productImage">
+          </a>
+          <mat-card-content fxFlex class="productContent">{{product.description}}</mat-card-content>
+        </div>
+      </div>
+      <div>
+        <div class="productPrice">{{product.price}} {{product.currency}}</div>
+      </div>
+    </div>
+    <mat-card-actions align="end" fxLayoutGap="10">
+      <button mat-flat-button color="accent"><a routerLink="{{'/products/' + product.slug}}" >Pokaż</a></button>
+      <button mat-flat-button color="accent">Do koszyka</button>
+    </mat-card-actions>
+  </mat-card>
+
+  <mat-paginator *ngIf="categoryProducts?.products && categoryProducts!.products.totalElements > 0"
+    [length]="categoryProducts!.products.totalElements"
+               [pageSize]="10"
+               [pageSizeOptions]="[5, 10, 25, 100]"
+               aria-label="Select page"
+               (page)="onPageEvent($event)">
+ </mat-paginator>
