--- a/src/app/modules/product-details/product-details.component.html
+++ b/src/app/modules/product-details/product-details.component.html
@@ -17,7 +17,7 @@
             <div fxLayout="row" fxFlexAlign="end">
             </div>
                 <span class="price">{{product.price}} {{product.currency}}</span>
-            <button mat-flat-button color="warn">Do koszyka</button>
+            <button mat-flat-button color="warn" routerLink="/cart" [queryParams]="{productId: product!.id}">Do koszyka</button>
         </div>
     </div>
 
