--- a/src/app/modules/cart/cart.component.html
+++ b/src/app/modules/cart/cart.component.html
@@ -20,7 +20,7 @@
                         </a>
                     </div>
                     <div class="cart-col-2">{{item.value?.product?.name}}</div>
-                    <div class="cart-col-3"><input formControlName="quantity" class="quantityInput"></div>
+                    <div class="cart-col-3"><input formControlName="quantity" class="quantityInput"/></div>
                     <div class="cart-col-4">{{item.value?.lineValue}}</div>
                     <div class="cart-col-5">
                         <button mat-icon-button (click)="deleteItem(item.value?.id)"><mat-icon>delete</mat-icon></button>
