--- a/src/app/modules/category/category.component.html
+++ b/src/app/modules/category/category.component.html
@@ -20,7 +20,7 @@
     </div>
     <mat-card-actions align="end" fxLayoutGap="10">
       <button mat-flat-button color="accent"><a routerLink="{{'/products/' + product.slug}}" >Pokaż</a></button>
-      <button mat-flat-button color="accent">Do koszyka</button>
+      <button mat-flat-button color="accent" routerLink="/cart" [queryParams]="{productId: product!.id}">Do koszyka</button>
     </mat-card-actions>
   </mat-card>
 
