--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -9,6 +9,6 @@
         <span></span>
         <button mat-button color="warn" routerLink="/login">Zaloguj</button>
         <span></span>
-        <a routerLink="/cart"><mat-icon color="accent" class="shoppingBasket">shopping_basket</mat-icon></a>
+        <a routerLink="/cart"><mat-icon color="accent" class="shoppingBasket" matBadge="{{cartProductCounter}}" matBadgeColor="warn">shopping_basket</mat-icon></a>
     </div>
 </header>
