--- a/src/app/modules/cart/cart.component.html
+++ b/src/app/modules/cart/cart.component.html
@@ -7,7 +7,7 @@
             <div class="cart-hcol-3">Ilość</div>
             <div class="cart-hcol-4">Wartość</div>
             <div class="cart-hcol-4">Usuń</div>
-             
+
         </div>
         <div formGroupName="items">
             <div *ngFor="let item of items; let i = index">
@@ -20,24 +20,28 @@
                         </a>
                     </div>
                     <div class="cart-col-2">{{item.value?.product?.name}}</div>
-                    <div class="cart-col-3"><input formControlName="quantity" class="quantityInput"/></div>
+                    <div class="cart-col-3"><input formControlName="quantity" class="quantityInput" /></div>
                     <div class="cart-col-4">{{item.value?.lineValue}}</div>
                     <div class="cart-col-5">
-                        <button mat-icon-button (click)="deleteItem(item.value?.id)"><mat-icon>delete</mat-icon></button>
+                        <button mat-icon-button
+                            (click)="deleteItem(item.value?.id)"><mat-icon>delete</mat-icon></button>
                     </div>
                 </div>
             </div>
         </div>
         <div class="card-row" fxLayoutAlign="end start" fxLayoutGap="30">
-            <div fxLayoutAlign="">
-                <button mat-flat-button color="warn" (click)="back()">Powrót do
-                zakupów</button>
-                </div>
-            <button mat-flat-button color="warn"(click)="submit()" >Zaktualizuj koszyk</button>
+
+            <button mat-flat-button color="warn" (click)="submit()">Zaktualizuj koszyk</button>
         </div>
-        <div>
+        <div fxLayoutAlign="end start">
             <div class="summary"> Wartość: </div>
             <div class="summary"> <b>{{summary!.summary!.grossValue}}</b></div>
+        </div>
+        <div fxLayoutAlign="">
+            <button mat-flat-button color="warn" (click)="back()">Powrót do zakupów</button>
+        </div>
+        <div fxLayoutAlign="end start">
+            <button class="orderButton" mat-flat-button color="accent" routerLink="/order" type="button">Zamawiam</button>
         </div>
     </div>
 </form>
