--- a/src/app/modules/order/order.component.scss
+++ b/src/app/modules/order/order.component.scss
@@ -1,3 +1,16 @@
+.orderDorm{
+    width: 400px;
+}
+
+.errorMessage{
+    color: red;
+}
+
+.orderButton{
+    font-size: 22px;
+    width: 220px;
+}
+
 .cart-hcol-1, 
 .cart-hcol-2,
 .cart-hcol-3,
@@ -13,7 +26,7 @@
 .cart-col-2,
 .cart-col-3,
 .cart-col-4,
-.cart-hcol-5{
+.cart-col-5{
     padding: 7px;
     font-size: 18px;
     width: 100px;
@@ -39,11 +52,10 @@
     border-bottom: 1px solid #eee;
 }
 
-.quantityInput{
-    width: 25px;   
+.orderSummary{
+    font-size: 18px;
 }
 
-.orderButton{
-    font-size: 22px;
-    width: 220px;
+.orderSummary div{
+    margin-bottom:12px;
 }
