--- a/src/app/modules/order/order.component.html
+++ b/src/app/modules/order/order.component.html
@@ -143,6 +143,10 @@
                 </div>
             </div>
         </div>
+        <div *ngIf="errorMessage" class="errorMessage" fxLayoutAlign="end start">
+            Coś poszło źle. Sproóbuj ponownie później.
+        </div>
+
         <div fxLayoutAlign="end start">
             <button mat-flat-button color="accent" class="orderButton">Zamawiam i płacę</button>
         </div>
