--- a/src/app/modules/admin/admin-order/admin-order-update/admin-order-update.component.html
+++ b/src/app/modules/admin/admin-order/admin-order-update/admin-order-update.component.html
@@ -1,13 +1,19 @@
 <h1>Edycja zamówienia </h1>
 <div>
     <h2>Dane zamówienia</h2>
-    Numer zamówienia: {{order!.id}}
+    Numer zamówienia: {{order.id}}
     <br /><br />
     Data złożenia: {{order!.placeDate | date : 'yyyy-MM-dd HH:mm'}}<br />
     Płatność: {{order!.payment!.name}}<br /><br />
     
-    <form fxLayaout="row" fxLayoutAlign="space-between start">
-        <div>Status: {{order!.orderStatus}}</div>
+    <form [formGroup]="formGroup" fxLayaout="row" fxLayoutAlign="space-between start" (submit)="changeStatus()">
+      
+        <mat-form-field appearance="fill">
+            <mat-label>Status</mat-label>
+            <mat-select formControlName="orderStatus">
+                <mat-option *ngFor="let status of statuses | keyvalue" [value]="status.key">{{status.value}}</mat-option>
+            </mat-select>
+        </mat-form-field>
         <button mat-flat-button color="primary">Zapisz</button>
     </form>
 </div>
