--- a/src/app/modules/admin/admin-order/admin-order.component.html
+++ b/src/app/modules/admin/admin-order/admin-order.component.html
@@ -1,5 +1,4 @@
 <h1> Zamówienia</h1>
-
 <table mat-table [dataSource]="data">
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> Id </th>
@@ -11,7 +10,7 @@
     </ng-container>
     <ng-container matColumnDef="orderStatus">
         <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let element"><span class="status-{{element.orderStatus}}">{{element.orderStatus}}</span></td>
+        <td mat-cell *matCellDef="let element"><span class="status-{{element.orderStatus}}">{{resolveStatus(element.orderStatus)}}</span></td>
     </ng-container>
     <ng-container matColumnDef="grossValue">
         <th mat-header-cell *matHeaderCellDef> Wartość </th>
