--- a/src/app/layouts/fullpageadmin/fullpageadmin.component.html
+++ b/src/app/layouts/fullpageadmin/fullpageadmin.component.html
@@ -15,7 +15,8 @@
                 <mat-list-option><a routerLink="/admin"> Dashboard</a></mat-list-option>
                 <mat-list-option>
                     <a routerLink="/admin/orders"> Zamówienia</a>
-                    <span class="subMenuLink">| <a routerLink="/admin/orders/export">Eksportuj</a></span>
+                    <span class="subMenuLink">| <a class="inner" routerLink="/admin/orders/export">Eksportuj</a></span>
+                    <span class="subMenuLink">| <a class="inner" routerLink="/admin/orders/stats">Statystyki</a></span>
                 </mat-list-option>
                 <mat-list-option><a routerLink="/admin/products"> Produkty</a></mat-list-option>
                 <mat-list-option><a routerLink="/admin"> Link</a></mat-list-option>
