--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -30,7 +30,7 @@
                 <mat-label> Powtórz Hasło</mat-label>
                 <input type="password" matInput formControlName="repeatPassword" placeholder="Powtórz hasło">
             </mat-form-field>
-            <button mat-flat-button color="primary">Zaloguj</button>
+            <button mat-flat-button color="primary">Rejestracja</button>
         </form>
     </div>
 </div>
