--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -1,5 +1,4 @@
 <h1> Zamówienia</h1>
-
 <table mat-table [dataSource]="orders">
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>Id </th>
@@ -7,7 +6,7 @@
     </ng-container>
     <ng-container matColumnDef="placeDate">
         <th mat-header-cell *matHeaderCellDef> Data </th>
-        <td mat-cell *matCellDef="let element">{{element.placeDate}}</td>
+        <td mat-cell *matCellDef="let element">{{element.placeDate | date : 'yyyy:MM-dd HH:mm'}}</td>
     </ng-container>
     <ng-container matColumnDef="orderStatus">
         <th mat-header-cell *matHeaderCellDef> Status</th>
